Yet more tweaks

--- a/Language/performance.pod
+++ b/Language/performance.pod
@@ -4,10 +4,8 @@
 
 =SUBTITLE Measuring and improving run-time or compile-time performance
 
-A simple take on performance is "speed and ram usage". According to wikipedia,
-L<Computer Performance|https://en.wikipedia.org/wiki/Computer_Performance> is
-"characterized by the amount of useful work accomplished by a computer system or
-computer network compared to the time and resources used.".
+This page is about anything to do with L<computer performance|https://en.wikipedia.org/wiki/Computer_Performance>
+in the context of Perl 6.
 
 =head1 First, clarify the problem
 
@@ -65,7 +63,7 @@ Use L<perl6-bench|https://github.com/japhb/perl6-bench>.
 If you run perl6-bench for multiple compilers (typically versions of Perl 5, Perl 6, or NQP)
 then results for each are visually overlaid on the same graphs to provide for quick and easy comparison.
 
-=head2 Share the problem
+=head2 Share problems
 
 Once you've used the above techniques to pinpoint code and performance that really matters you're in
 a good place to share problems, one at a time:
@@ -79,7 +77,7 @@ What if it took a month for folk to help you achieve that? A year?
 
 =item Let folk know if your Perl 6 use-case is in a production setting or just for fun.
 
-=head1 Solve the problem
+=head1 Solve problems
 
 This bears repeating: B<make sure you're not wasting time on the wrong code>.
 Start by identifying the L<"critical 3%"|https://en.wikiquote.org/wiki/Donald_Knuth> of your code.
@@ -104,11 +102,12 @@ The call overhead of having multiple C<foo> definitions is generally insignifica
 of C<where> below), so if your new definition handles its particular case more quickly/leanly than the
 previously existing set of definitions then you probably just made your code that much faster/leaner for that case.
 
-=head2 Type-checks and call resolution
+=head2 Speed up type-checks and call resolution
 
 Most L<C<where> clauses|/type/Signature#Type_Constraints> -- and thus most
-L<subtypes|http://design.perl6.org/S12.html#Types_and_Subtypes> -- force dynamic (run-time)
-type checking and call resolution. This is slower, or at least later, than compile-time.
+L<subsets|http://design.perl6.org/S12.html#Types_and_Subtypes> -- force dynamic (run-time)
+type checking and call resolution for any call it I<might> match. This is slower, or at least later,
+than compile-time.
 
 Method calls are generally resolved as late as possible, so dynamically, at run-time,
 whereas sub calls are generally resolvable statically, at compile-time.
@@ -156,7 +155,7 @@ A "lazy" approach often performs much better:
     
 This loop pulls just one line from 'largefile.txt', immediately processes it, then gets the next, and so on.
 
-=head3 Changing sequential/blocking code to parallel/non-blocking
+=head3 Change sequential/blocking code to parallel/non-blocking
 
 This is another very important class of algorithmic improvement.
 
@@ -164,7 +163,7 @@ See the slides for
 L<Parallelism, Concurrency, and Asynchrony in Perl 6|http://jnthn.net/papers/2015-yapcasia-concurrency.pdf#page=17>
 and/or L<the matching video|https://www.youtube.com/watch?v=JpqnNCx7wVY&list=PLRuESFRW2Fa77XObvk7-BYVFwobZHdXdK&index=8>.
 
-=head2 Using native types
+=head2 Use native types
 
 You may be able to make some code run faster and/or use less ram by adding native types to your code:
 
@@ -176,7 +175,7 @@ XXX Start of section to be written
 
 XXX End of section to be written
     
-=head2 Using existing high performance code
+=head2 Use existing high performance code
 
 Is there an existing high (enough) performance implementation of what you're trying to speed up / slim down?
 
@@ -193,11 +192,12 @@ L<use Perl 5 modules in Perl 6|http://stackoverflow.com/a/27206428/1077672>.
 More generally, Perl 6 is designed to be able to smoothly interop with other languages and there are a number
 of L<modules aimed at providing convenient use of libs from other langs|http://modules.perl6.org/#q=inline>.
 
-=head2 Speeding up Rakudo itself
+=head2 Make the Rakudo compiler generate faster code
 
-The focus to date (Feb 2016) regarding the compiler has been correctness, not speed, but that's expected to
-change somewhat this year and beyond. You can talk to compiler devs on the freenode IRC channels #perl6 and
-#moarvm about what to expect. Or you can contribute yourself:
+The focus to date (Feb 2016) regarding the compiler has been correctness, not how fast it generates code or,
+more importantly, how fast or lean the code it generates runs. But that's expected to change somewhat this
+year and beyond. You can talk to compiler devs on the freenode IRC channels #perl6 and #moarvm about what
+to expect. Better still you can contribute yourself:
 
 =item Rakudo is largely written in Perl 6. So if you can write Perl 6, then you can hack on the compiler,
 including optimizing any of the large body of existing high-level code that impacts the speed of your code
