--- a/Language/performance.pod
+++ b/Language/performance.pod
@@ -4,7 +4,7 @@
 
 =SUBTITLE Measuring and improving run-time or compile-time performance
 
-This page is about anything to do with L<computer performance|https://en.wikipedia.org/wiki/Computer_Performance>
+This page is about anything to do with L<computer performance|https://en.wikipedia.org/wiki/Computer_performance>
 in the context of Perl 6.
 
 =head1 First, clarify the problem
@@ -17,8 +17,8 @@ L<"critical 3%"|https://en.wikiquote.org/wiki/Donald_Knuth> by "profiling" as ex
 Expressions of the form C<now - BEGIN now>, where C<BEGIN> is a
 L<phase in the running of a Perl 6 program|/language/phasers>, provide a great idiom for timing code snippets.
 
-Using the C<m: your code goes here> L<#perl6 channel evalbot|http://doc.perl6.org/language/glossary#camelia>
-you can write lines like:
+Use the C<m: your code goes here> L<#perl6 channel evalbot|http://doc.perl6.org/language/glossary#camelia>
+to write lines like:
 
     m: say now - INIT now 
     rakudo-moar 8bd7ee: OUTPUT«0.0018558␤» 
@@ -28,8 +28,8 @@ because the latter occurs during L<the INIT phase|/language/phasers#INIT>.
 
 =head2 Profile with C<prof-m: your code goes here>
 
-Entering C<prof-m: your code goes here> in the L<#perl6 channel|http://doc.perl6.org/language/glossary#IRC>
-invokes an evalbot that runs a Perl 6 compiler with a C<--profile> option.
+Enter C<prof-m: your code goes here> in the L<#perl6 channel|http://doc.perl6.org/language/glossary#IRC>
+to invoke a Perl 6 compiler with a C<--profile> option.
 The evalbot's output includes a link to L<profile info|https://en.wikipedia.org/wiki/Profiling_(computer_programming)>:
 
 =begin code :allow< L >
@@ -84,7 +84,7 @@ Start by identifying the L<"critical 3%"|https://en.wikiquote.org/wiki/Donald_Kn
 
 =head2 Line by line
 
-A quick, fun and frequently very productive way to try improve code line-by-line is to collaborate with
+A quick, fun, productive way to try improve code line-by-line is to collaborate with
 others using the L<#perl6|http://doc.perl6.org/language/glossary#IRC> evalbot
 L<camelia|http://doc.perl6.org/language/glossary#camelia>.
 
@@ -144,16 +144,16 @@ that array:
 The assignment of all the lines in 'largefile.txt' to C<@lines> all at once is called "eager" assignment,
 the opposite of "lazy".
 
-But if 'largefile.txt' contains a million very long lines you just used up a ton of memory and it may
+If 'largefile.txt' contains a million very long lines you just used up a ton of memory and it may
 well take quite a while before your code starts to do something with the first line. 
 
-A "lazy" approach often performs much better:
+A "lazy" approach often performs much better than an eager one:
 
     for 'largefile.txt'.IO.lines -> $line {
         # do something with $line
     }
     
-This loop pulls just one line from 'largefile.txt', immediately processes it, then gets the next, and so on.
+This loop pulls a line from 'largefile.txt', immediately processes it, then gets the next, and so on.
 
 =head3 Change sequential/blocking code to parallel/non-blocking
 
@@ -189,7 +189,7 @@ Perl 5's compiler can be treated as a C lib. Mix in Perl 6 types, the L<MOP|/lan
 programming that someone else has done for you, and the upshot is that you can conveniently
 L<use Perl 5 modules in Perl 6|http://stackoverflow.com/a/27206428/1077672>.
 
-More generally, Perl 6 is designed to be able to smoothly interop with other languages and there are a number
+More generally, Perl 6 is designed for smooth interop with other languages and there are a number
 of L<modules aimed at providing convenient use of libs from other langs|http://modules.perl6.org/#q=inline>.
 
 =head2 Make the Rakudo compiler generate faster code
