--- a/Language/exceptions.pod
+++ b/Language/exceptions.pod
@@ -96,7 +96,7 @@ rethrown.
 Output:
 
     I'm alive!
-    No, I expect you die DIE Mr. Bond!
+    No, I expect you to DIE Mr. Bond!
     I'm immortal.
     Just stop already!
       in block <unit> at exception.p6 line 21
