show that try blocks are normal blocks (timotimo++ for the nice idiom)

--- a/Language/exceptions.pod
+++ b/Language/exceptions.pod
@@ -101,6 +101,13 @@ Output:
     Just stop already!
       in block <unit> at exception.p6 line 21
 
+A C<try>-block is a normal block and as such treats it's last statement as the
+return value of itself. We can therefor use it as a RHS.
+
+    say try { +"99999" } // "oh no"
+    say try { +"hello" } // "oh no"
+    # OUTPUT«99999␤oh no␤»
+
 =head1 Throwing exceptions
 
 One can also explicitly throw exceptions via the C<.throw> method on an
