Add the equivalent of backticks - capture stdout.

--- a/Language/5to6-nutshell.pod
+++ b/Language/5to6-nutshell.pod
@@ -1097,6 +1097,22 @@ e.g.:
     my @lines = "test-file".IO.slurp.split(/\n/);
     say @lines.elems;    #-> 4
 
+=head2 Trapping the standard output of executables.
+
+Whereas in Perl 5 you would do:
+
+    my $arg = 'Hello';
+    my $captured = `echo "$arg"`;
+    my $captured = qx(echo "$arg");
+
+In Perl 6, you can do:
+
+    my $arg = 'Hello';
+    my $captured = qq:x(echo "{$arg}");
+
+Beware of interpolating strings with special shell characters! (Which is a
+problem in Perl 5 as well).
+
 =head1 Environment variables
 
 =head2 Perl module library path
