Add equivalent to each

--- a/Language/5to6-nutshell.pod
+++ b/Language/5to6-nutshell.pod
@@ -747,7 +747,17 @@ then just use C«<->» and explicitly specify C«$_».
     for @cars        {...} # Perl 6; $_ is read-only
     for @cars <-> $_ {...} # Perl 6; $_ is read-write
 
+=head4 C<each>
 
+Here is the equivalent to Perl 5’s C<while…each(%hash)> or C<while…each(@array)>
+(= iterating over both the keys or indices and values of a data structure) in
+Perl 6:
+
+    while (my ($i, $v) = each(@array)) { ... } # Perl 5
+    for @array.kv -> $i, $v { ... } # Perl 6
+
+    while (my ($k, $v) = each(%hash)) { ... } # Perl 5
+    for %hash.kv -> $k, $v { ... } # Perl 6
 
 =head2 Flow Control statements
 
