--- a/Type/Pair.pod
+++ b/Type/Pair.pod
@@ -11,16 +11,20 @@ atomic units in C<Hash>es, and they are also used in conjunction with named
 arguments and parameters.
 
 X<:> X<< => >> X<:!>
-There are three syntaxes for C<Pair>s:
+There are many syntaxes for creating C<Pair>s:
 
-    'key' => 'value'    # this...
-    :key<value>         # ...means the same as this
-    :$foo               # short for foo => $foo
+    Pair.new('key','value)  # The canonical way
+    'key' => 'value'        # this...
+    :key<value>             # ...means the same as this
+    :key<value1 value2>     # But this is  key => <value1 value2>
+    :$foo                   # short for  foo => $foo
+    :foo(127)               # short for  foo => 127
+    :127foo                 # the same   foo => 127
 
 Variants of this are
 
-    :key                # same as   key => True
-    :!key               # same as   key => False
+    :key                    # same as   key => True
+    :!key                   # same as   key => False
 
 =head1 Methods
 
