Bool() doesn't return a Match object.
Bool() returns a Bool.

--- a/Type/Regex.pod
+++ b/Type/Regex.pod
@@ -58,6 +58,7 @@ failure.
 
     multi method Bool(Regex:D:) returns Bool:D
 
-Matches against the caller's L<$_> variable, and returns the L<Match> object
+Matches against the caller's L<$_> variable, and returns True for a match or
+False for no match. 
 
 =end pod
