--- a/Type/Supply.pod
+++ b/Type/Supply.pod
@@ -188,7 +188,7 @@ values seen are emitted in reverse order.
 
 Waits until the given supply is done, then creates a supply to which all
 values seen are emitted in sorted order.  Optionally accepts a comparator
-C<Block|/type/Block>.
+L<Block|/type/Block>.
 
 =head1 Methods that return another Supply
 
