--- a/Type/Any.pod
+++ b/Type/Any.pod
@@ -54,7 +54,7 @@ Defined as:
 
 Usage:
 
-    LIST.any
+    LIST.all
 
 Interprets the invocant as a list and creates an
 C<all>-L<Junction|/type/Junction> from it.
