--- a/Language/regexes.pod
+++ b/Language/regexes.pod
@@ -358,7 +358,7 @@ It is also possible to use non inclusive ranges using a caret:
     say Bool('aaaa' ~~ /a ** 1^..^6); #-> True
 =end code
 
-This includes the numeric ranges staring from 0:
+This includes the numeric ranges starting from 0:
 
 =begin code
     say Bool('aaa' ~~ /a ** ^6/); #->true
