Assorted small wording tweaks.

--- a/Language/list.pod
+++ b/Language/list.pod
@@ -34,7 +34,7 @@ first element of a list is at index number zero:
 
 =head1 The @ sigil
 
-Variables in perl6 whose names bear the C<@> sigil are expected to
+Variables in Perl 6 whose names bear the C<@> sigil are expected to
 contain some sort of list-like object.  Of course, other variables may
 also contain these objects, but C<@>-sigiled variables always do, and
 are expected to act the part.
@@ -93,10 +93,18 @@ may B<not> be bound to a C<Seq>.
 This is because the C<Seq> does not keep values around after you have used them.
 This is useful behavior if you have a very long sequence, as you may want to
 throw values away after using them, so that your program does not fill up memory.
+For example, when processing a file of a million lines:
+
+    for 'filename'.IO.lines -> $line {
+        do-something-with($line);
+    }
+
+You can be confident that the entire content of the file will not stay around
+in memory, unless you are explicitly storing the lines somewhere.
 
 On the other hand, you may want to keep old values around in some cases.
 It is possible to hide a C<Seq> inside a C<List>, which will still be lazy,
-but will remember old values -- this is done by calling the C<.list> method.
+but will remember old values. This is done by calling the C<.list> method.
 Since this C<List> fully supports C<Positional>, you may bind it directly
 to an C<@>-sigiled variable.
 
@@ -114,7 +122,7 @@ for details.
 =head2 Slips
 
 Sometimes you want to insert the elements of a list into another list.
-This can be done with a special type of sequence called a C<Slip>.
+This can be done with a special type of list called a C<Slip>.
 
     say (1,(2,3),4) eqv (1,2,3,4);         # says False
     say (1,Slip.new(2,3),4) eqv (1,2,3,4); # says True
