--- a/Type/Cool.pod
+++ b/Type/Cool.pod
@@ -1302,6 +1302,20 @@ C<EVAL> is also a gateway for executing code in other languages:
 
     EVAL "use v5.20; say 'Hello from perl5!'", :lang<Perl5>;
 
+=head2 routine EVALFILE
+
+Defined as:
+
+    sub EVALFILE(Cool $filename, :$lang = { ... })
+
+Usage:
+
+    EVALFILE "foo.p6";
+
+Slurps the specified file and evaluates it. Behaves the same way as C<EVAL>
+with regard to both scoping and the C<$lang> parameter. Evaluates to the value
+produced by the final statement in the file.
+
 =begin comment
 
 TODO: sech, asech, cosech, acosech, cotanh, acotanh, cis,
