Fix Supply.Promise docs; dbrunton++.

--- a/Type/Supply.pod
+++ b/Type/Supply.pod
@@ -103,14 +103,22 @@ down with error) when the supply is quit.
 
     method Promise(Supply:D:) returns Promise:D
 
-Returns a L<Promise|/type/Promise> object for the next value. That means the
-promise is kept when there is a next value, and broken when the supply is done
-or quit before a value arrived.
+Returns a L<Promise|/type/Promise> that will be kept when the C<Supply> is
+C<done>. If the C<Supply> also emits any values, then the C<Promise> will be
+kept with the final value. Otherwise, it will be kept with C<Nil>. If the
+C<Supply> ends with a C<quit> instead of a C<done>, then the C<Promise> will
+be broken with that exception.
 
-    my $s = Supply.new;
+    my $supplier = Supplier.new;
+    my $s = $supplier.Supply;
     my $p = $s.Promise;
     $p.then(-> $v { say "got $v.result()" });
-    $s.emit('cha');         # got cha
+    $supplier.emit('cha');         # not output yet
+    $supplier.done();              # got cha
+
+The C<Promise> method is most useful when dealing with supplies that will tend
+to produce just one value, when only the final value is of interest, or when
+only completion (successful or not) is relevant.
 
 =head2 method close
 
