--- a/Type/Supply.pod
+++ b/Type/Supply.pod
@@ -120,6 +120,13 @@ The C<Promise> method is most useful when dealing with supplies that will tend
 to produce just one value, when only the final value is of interest, or when
 only completion (successful or not) is relevant.
 
+=head2 method close
+
+    method close(Supply:D: Tap:D $t)
+
+Closes the given tap, this is, calls its C<close> callback (if any), and
+prevents it from getting any more values flowing through the supply.
+
 =head2 method live
 
     method live(Supply:D:) returns Bool:D
@@ -128,7 +135,7 @@ Returns C<True> if the supply is "live", that is, values are emitted to taps
 as soon as they arrive. Always returns C<True> in the default C<Supply> (but
 for example on the supply returned from C<Supply.from-list> it's C<False>).
 
-    say Supply.new.live;    # True
+    say Supplier.new.Supply.live;    # True
 
 =head2 method schedule-on
 
