Clarify behavior of Channel.Supply.
Thanks to jnthn for clarification.

--- a/Type/Channel.pod
+++ b/Type/Channel.pod
@@ -145,6 +145,9 @@ This returns an C<on-demand> L<Supply|Supply> that emits a value for every value
 received on the Channel. C<done> will be called on the C<Supply> when the L<Channel>
 is closed.
 
+Multiple calls to this method produce multiple instances of Supply, which compete
+over the values from the Channel.
+
 =head2 sub await
 
 Defined as:
